<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_pet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/cardview_horizontalmargin"
    android:layout_marginTop="@dimen/cardview_verticalmargin"
    android:layout_marginRight="@dimen/cardview_horizontalmargin"
    android:layout_marginBottom="@dimen/cardview_verticalmargin"
    android:elevation="@dimen/cardview_elevation"
    app:cardCornerRadius="@dimen/cardview_cornerradius">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/cardview_linLayout_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cardview_imv_pet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_image_heightSize"
            android:contentDescription="@string/img_contentDescription"
            android:src="@drawable/dogdefault"
            android:scaleType="centerCrop"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/cardview_linLayout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <ImageButton
                android:id="@+id/cardview_imgBtn_like"
                android:layout_width="@dimen/img_square_icon"
                android:layout_height="@dimen/img_square_icon"
                android:layout_marginEnd="@dimen/imgButon_marginEnd"
                android:background="@drawable/ic_bonebutton"
                android:contentDescription="@string/img_contentDescription" />

            <TextView
                android:id="@+id/cardview_txv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_name"
                android:textSize="@dimen/cardview_txvSize_description"
                android:textStyle="bold" />

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/cardview_linLayout_infoLikes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cardview_txv_countLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txv_countLikes"
                    android:textSize="@dimen/cardview_txvSize_description" />

                <ImageView
                    android:id="@+id/cardview_imv_countLikes"
                    android:layout_width="@dimen/img_square_icon"
                    android:layout_height="@dimen/img_square_icon"
                    android:layout_marginStart="@dimen/imgIcon_marginStart"
                    android:background="@drawable/ic_bone"
                    android:contentDescription="@string/img_contentDescription" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.CardView>
